@@ -1,243 +1,79 @@
-# Comprehensive Cluster Analysis Report
-
-## 1. 📊 AVS Index Analysis
-
-### Summary Table of Indices
-| Index Name | Mode | Dimensions | Distance Metric | HNSW m | ef | efConstruction | Cache Size | Batching Interval |
-|------------|------|------------|-----------------|--------|----|----------------|------------|-------------------|
-| [Data from avs-indices.yaml] |
-
-### Detailed Breakdown for Each Index
-#### Index Identification
-- **Name**: [Index Name]
-- **Namespace**: [Namespace]
-- **Set**: [Set]
-- **Mode**: [DISTRIBUTED/STANDALONE]
-
-#### Vector Configuration
-- **Dimensions**: [Dimensions]
-- **Field Name**: [Field Name]
-- **Distance Metric**: [Distance Metric]
-- **Set Filter**: [Set Filter]
-
-#### HNSW Parameters
-- **m**: [Number of connections]
-- **ef**: [Search parameter]
-- **efConstruction**: [Build parameter]
-- **maxMemQueueSize**: [Value]
-- **enableVectorIntegrityCheck**: [Enabled/Disabled]
-
-#### Batching Configuration
-- **indexInterval**: [Interval]
-- **maxIndexRecords**: [Records]
-- **maxReindexRecords**: [Records]
-- **reindexInterval**: [Interval]
-
-#### Caching Configuration
-- **Index Cache**:
-  - **maxEntries**: [Entries]
-  - **expiry**: [Expiry]
-- **Record Cache**:
-  - **maxEntries**: [Entries]
-  - **expiry**: [Expiry]
-
-#### Healer Configuration
-- **maxScanPageSize**: [Size]
-- **maxScanRatePerNode**: [Rate]
-- **parallelism**: [Parallelism]
-- **reindexPercent**: [Percent]
-- **schedule**: [Schedule]
-
-#### Merge Configuration
-- **indexParallelism**: [Parallelism]
-- **reIndexParallelism**: [Parallelism]
-
-#### Storage Configuration
-- **Namespace**: [Namespace]
-- **Set**: [Set]
-
-#### Recommendations
-- **Vector Dimension Optimization**: [Recommendation]
-- **HNSW Parameter Tuning**: [Recommendation]
-- **Caching Strategy**: [Recommendation]
-- **Batching Optimization**: [Recommendation]
-- **Memory Usage Optimization**: [Recommendation]
-
-## 2. 🌐 Cluster Configuration
-
-### Cluster Summary Table
-| Node | Role | Endpoint | Cluster ID | Version | Visible Nodes |
-|------|------|----------|------------|---------|---------------|
-| [Data from avs-cluster-info.txt] |
-
-### Detailed Analysis
-- **Node Distribution and Roles**: [Analysis]
-- **Endpoint Configuration and Visibility**: [Analysis]
-- **Version Information**: [Analysis]
-- **Cluster ID and Networking Setup**: [Analysis]
-- **Analysis of Node Distribution vs Index Mode**: [Analysis]
-
-## 3. ⚙️ JVM Configuration Analysis
-
-### JVM Configuration Summary Table
-| Node | Heap (Xms/Xmx) | GC Type | GC Threads | NUMA | Compressed Oops | Code Cache |
-|------|---------------|---------|------------|------|-----------------|------------|
-| [Data from jvm-info.txt] |
-
-### Detailed Analysis for Each Node
-- **Memory Configuration**:
-  - **Initial Heap (-Xms)**: [Value]
-  - **Maximum Heap (-Xmx)**: [Value]
-  - **Soft Max Heap (-XX:SoftMaxHeapSize)**: [Value]
-  - **Code Cache Settings**: [Settings]
-  - **Other Memory-related Flags**: [Flags]
-
-- **GC Configuration**:
-  - **GC Type and Version**: [Type/Version]
-  - **GC Thread Settings**: [Settings]
-  - **GC-specific Flags**: [Flags]
-
-- **Performance Settings**:
-  - **NUMA Configuration**: [Configuration]
-  - **Compressed Oops**: [Enabled/Disabled]
-  - **Pre-touch Settings**: [Settings]
-  - **Compiler Settings**: [Settings]
-
-- **Module/Package Configuration**:
-  - **Added Modules**: [Modules]
-  - **Opened Packages**: [Packages]
-  - **Exported Packages**: [Packages]
-
-- **Current Memory Usage**:
-  - **Used Heap**: [Usage]
-  - **Heap Capacity**: [Capacity]
-  - **Max Capacity**: [Max Capacity]
-  - **Metaspace Usage**: [Usage]
-  - **Class Space Usage**: [Usage]
-
-## 4. 💾 Memory Analysis
-
-### Memory Usage Summary Table
-| Node | Total Memory | Allocatable | Used Heap | Heap Capacity | Max Capacity | Metaspace |
-|------|--------------|-------------|-----------|---------------|--------------|-----------|
-| [Data from node-aggregates.json and jvm-info.txt] |
-
-### Detailed Analysis for Each Node
-- **Heap Size vs Container Limits**: [Analysis]
-- **Memory Distribution Across Different Regions**: [Analysis]
-- **GC Pressure Indicators**: [Indicators]
-- **Memory Efficiency Recommendations**: [Recommendations]
-- **Correlation Between Index Parameters and Memory Usage**: [Analysis]
-
-## 5. 🔍 Performance Configuration Analysis
-
-### Performance Metrics Table
-| Node | CPU Cores | Memory | Network Bandwidth | Storage | Pod Count |
-|------|-----------|--------|-------------------|---------|-----------|
-| [Data from node-aggregates.json] |
-
-### Analysis
-- **Index Caching vs JVM Heap Size**: [Analysis]
-- **Batching Parameters vs Available Memory**: [Analysis]
-- **Thread Settings vs Available CPU**: [Analysis]
-- **Network Configuration Impact**: [Impact]
-
-## 6. ⚠️ Potential Issues and Recommendations
-
-### Issues Summary Table
-| Issue Type | Severity | Affected Nodes | Description | Recommendation |
-|------------|----------|----------------|-------------|----------------|
-| [Identified Issues] |
-
-### Detailed Analysis
-- **Memory Configuration Improvements**: [Improvements]
-- **Index Parameter Optimizations**: [Optimizations]
-- **JVM Flag Adjustments**: [Adjustments]
-- **Cluster Balance Suggestions**: [Suggestions]
-- **Caching Strategy Improvements**: [Improvements]
-
-## 7. 📈 Scaling Considerations
-
-### Scaling Metrics Table
-| Resource | Current Usage | Available | Recommended Threshold | Action Required |
-|----------|--------------|-----------|----------------------|-----------------|
-| [Scaling Metrics] |
-
-### Analysis
-- **Current Resource Utilization**: [Utilization]
-- **Headroom for Growth**: [Headroom]
-- **Bottleneck Identification**: [Identification]
-- **Scaling Recommendations**: [Recommendations]
-
-## 8. 🔄 Resource Overview
-
-### Comprehensive Resource Table
-| Node | Total Memory | Allocatable | AVS Pods | Instance Type | Status | Cloud Provider | Region |
-|------|--------------|-------------|----------|---------------|--------|----------------|--------|
-| [Data from node-aggregates.json] |
-
-## 9. 📊 Node Overview
-
-### Detailed Pod Configuration Table
-| Node | Pod Name | Role | Memory Request | Memory Limit | JVM Heap | GC Type | Restarts |
-|------|----------|------|----------------|--------------|----------|---------|----------|
-| [Pod Information] |
-
 ## 10. ⚠️ OOMKill Analysis
 
 ### OOM Events Summary Table
 | Timestamp | Node | Pod | Container | Reason | Exit Code | Memory Settings | Node Pressure |
 |-----------|------|-----|-----------|--------|-----------|-----------------|---------------|
-| [OOM Events] |
+| N/A       | N/A  | N/A | N/A       | N/A    | N/A       | N/A             | N/A           |
 
 ### Detailed Analysis
-- **Container Restart History**: [History]
-- **Previous Termination States**: [States]
-- **System OOM Events**: [Events]
-- **Pod Events**: [Events]
-- **JVM Heap Settings at the Time**: [Settings]
-- **Node Memory Capacity**: [Capacity]
-- **Pattern Analysis**: [Analysis]
-- **Correlation with Memory Pressure**: [Correlation]
 
----
+#### Container Restart History
+- **Observation**: No restarts have been recorded for the AVS pods (`avs-app-aerospike-vector-search-0`, `avs-app-aerospike-vector-search-1`, `avs-app-aerospike-vector-search-2`).
+- **Analysis**: This indicates stable operation with no OOMKills or unexpected terminations.
 
-### Format Requirements:
-- All tables are placed at the top of their respective sections.
-- Consistent table formatting is used throughout.
-- Specific values and settings are included.
-- Clear before/after recommendations are provided.
-- Emojis are used for section headers.
-- Command examples for recommended changes are included.
+#### Previous Termination States
+- **Observation**: There are no records of previous termination states for the AVS pods.
+- **Analysis**: This suggests that the pods have been running smoothly without any interruptions.
 
-### Recommendations:
-1. **Current Setting**: [Current Setting]
-2. **Recommended Value**: [Recommended Value]
-3. **Rationale for Change**: [Rationale]
-4. **Impact Assessment**: [Impact]
-5. **Implementation Steps**: [Steps]
+#### System OOM Events
+- **Observation**: No system-level OOM events have been detected across the nodes.
+- **Analysis**: This indicates that the nodes have sufficient memory resources to handle the current workload.
 
-### Special Attention:
-- Consistency of JVM settings across nodes.
-- Alignment of index parameters with available resources.
-- Memory allocation efficiency.
-- GC behavior and settings.
-- Cache size vs heap size ratios.
-- Pod restart counts and timing.
-- Last termination states and reasons.
-- Exit codes (137 indicates OOMKill).
-- Time correlation between restarts and node pressure.
-- Pattern of restarts across the cluster.
-- Relative uptime of the pods.
+#### Pod Events
+- **Observation**: No significant pod events related to memory pressure or OOMKills have been recorded.
+- **Analysis**: This further confirms the stability of the cluster in terms of memory management.
 
-### OOMKill Analysis:
-1. Look at both container termination states AND system events.
-2. Check if restarts happened close to memory pressure events.
-3. Compare memory settings of pods that restarted vs stable pods.
-4. Consider the timing of restarts relative to pod age.
-5. Consider the relative uptime of the pods (if nodes restart it looks like 0 restarts).
+#### JVM Heap Settings at the Time
+- **Observation**: JVM heap settings are configured with a maximum heap size (`-Xmx`) that is well within the node's memory capacity.
+- **Analysis**: Proper JVM configuration contributes to the absence of OOM events, as it prevents excessive memory usage.
 
-Use the aggregated node information from node-aggregates.json to ensure accurate and consistent reporting of node resources, instance types, and cloud provider details.
+#### Node Memory Capacity
+- **Observation**: Nodes have ample memory capacity, with no memory pressure events recorded.
+- **Analysis**: The available memory capacity is sufficient to support the current pod configurations and workloads.
+
+#### Pattern Analysis
+- **Observation**: No patterns of restarts or memory pressure events have been observed.
+- **Analysis**: This suggests that the cluster is well-balanced and configured to handle its current load.
+
+#### Correlation with Memory Pressure
+- **Observation**: There is no correlation between pod restarts and memory pressure events, as neither have occurred.
+- **Analysis**: This indicates effective memory management and resource allocation across the cluster.
+
+### Recommendations
+
+1. **Current Setting**: No OOM events or restarts.
+   - **Recommended Value**: Maintain current settings.
+   - **Rationale for Change**: N/A
+   - **Impact Assessment**: Continued stability and performance.
+   - **Implementation Steps**: Continue monitoring and adjust configurations as needed based on workload changes.
+
+2. **Memory Configuration Improvements**: 
+   - **Current Setting**: Adequate memory allocation with no pressure.
+   - **Recommended Value**: Regularly review and adjust memory requests and limits to align with workload demands.
+   - **Rationale for Change**: To ensure continued stability and prevent future issues.
+   - **Impact Assessment**: Enhanced performance and resource utilization.
+   - **Implementation Steps**: Monitor memory usage trends and adjust configurations accordingly.
+
+3. **JVM Flag Adjustments**:
+   - **Current Setting**: JVM flags are optimized for current workloads.
+   - **Recommended Value**: Periodically review and optimize JVM flags based on application performance.
+   - **Rationale for Change**: To maintain optimal performance as workloads evolve.
+   - **Impact Assessment**: Improved application performance and stability.
+   - **Implementation Steps**: Review JVM performance metrics and adjust flags as necessary.
+
+4. **Cluster Balance Suggestions**:
+   - **Current Setting**: Balanced distribution of resources and workloads.
+   - **Recommended Value**: Continue monitoring and adjust node and pod configurations for optimal balance.
+   - **Rationale for Change**: To prevent resource bottlenecks and ensure efficient utilization.
+   - **Impact Assessment**: Sustained performance and reliability.
+   - **Implementation Steps**: Use monitoring tools to track resource usage and adjust configurations as needed.
+
+5. **Caching Strategy Improvements**:
+   - **Current Setting**: Effective caching strategy with no issues.
+   - **Recommended Value**: Regularly review and optimize caching configurations to align with application needs.
+   - **Rationale for Change**: To enhance performance and reduce latency.
+   - **Impact Assessment**: Improved application responsiveness and efficiency.
+   - **Implementation Steps**: Analyze cache hit rates and adjust configurations to optimize performance.
 
 ## Detailed Node Analysis
 
@@ -246,282 +82,313 @@ Use the aggregated node information from node-aggregates.json to ensure accurate
 
 ### 🖥️ Node Analysis: ip-192-168-26-117.ec2.internal
 
-#### Node Overview
-- **Instance Type**: m5.xlarge
-- **Region/Zone**: us-east-1 / us-east-1b
-- **Cloud Provider**: AWS (On-Demand)
-- **Node Conditions**: 
-  - MemoryPressure: ❌ No issues
-  - DiskPressure: ❌ No issues
-  - PIDPressure: ❌ No issues
-  - Ready: ✅ Node is ready
+#### Node Overview:
+- **Instance Type**: `m5.xlarge` (AWS EC2)
+- **Region/Zone**: `us-east-1` / `us-east-1b`
+- **Capacity**: 
+  - CPU: 4 cores
+  - Memory: ~15.9 GiB
+  - Pods: 58
+- **Allocatable Resources**: 
+  - CPU: 3920m
+  - Memory: ~14.8 GiB
+  - Pods: 58
+- **Node Conditions**: No memory, disk, or PID pressure. Node is ready.
+- **Cloud Provider**: AWS
+- **OS**: Amazon Linux 2
+- **Kernel Version**: 5.10.235-227.919.amzn2.x86_64
 
-#### Node Capacity & Allocatable Resources
-- **CPU**: 4 cores (3920m allocatable)
-- **Memory**: 15.8 GiB (14.8 GiB allocatable)
-- **Ephemeral Storage**: ~80 GiB (76 GiB allocatable)
-- **Pods**: 58 max
+#### Node-Level Observations:
+- **Resource Utilization**:
+  - CPU Requests: 190m (4%)
+  - Memory Requests: 170Mi (1%)
+  - Memory Limits: 768Mi (5%)
+- **No OOMKill Events**: Both system and Kubernetes OOM events are absent, indicating stable memory usage.
 
-#### Resource Allocation & Utilization
-- **CPU Requests**: 190m (4% of allocatable)
-- **Memory Requests**: 170Mi (1% of allocatable)
-- **Memory Limits**: 768Mi (5% of allocatable)
-- **Ephemeral Storage**: Not utilized
-
-#### Node-Level Recommendations
-1. **Resource Requests**: Increase CPU and memory requests for critical pods to ensure they have guaranteed resources.
-2. **Monitoring**: Set up alerts for any changes in node conditions, especially for memory and disk pressure.
-3. **Storage Utilization**: Consider using ephemeral storage for temporary data to optimize usage.
-
-### 🏷️ Cloud Provider & Instance Type
-- **Instance Type**: m5.xlarge is suitable for general-purpose workloads. Consider upgrading to a larger instance if CPU or memory becomes a bottleneck.
-
-### 🛠️ Node-Level Issues
-- **No OOM Events**: No out-of-memory events detected, indicating sufficient memory allocation.
+#### Recommendations for Node-Level Optimizations:
+1. **Resource Allocation**: Consider increasing CPU and memory requests for critical pods to ensure they have guaranteed resources.
+2. **Monitoring**: Implement detailed monitoring to track resource usage trends over time, which can help in proactive scaling decisions.
+3. **Node Taints and Tolerations**: Use taints and tolerations to control pod scheduling more effectively, ensuring critical workloads are prioritized.
 
 ### 🚀 Pod-Level Analysis
-- **AVS Pods**: No Aerospike Vector Search (AVS) pods found on this node. Ensure that AVS pods are scheduled correctly if expected.
 
-### 🔍 JVM & Pod Configuration Analysis
-- **No AVS Pods Detected**: Since no AVS pods are present, JVM configuration and heap analysis are not applicable.
+#### Observations:
+- **No AVS Pods Detected**: The node currently does not host any Aerospike Vector Search (AVS) pods.
 
-### 📈 Recommendations for Future Deployments
-1. **Node Role Assignment**: Ensure nodes have appropriate roles for AVS pods to be scheduled.
-2. **JVM Configuration**: For future AVS deployments, ensure JVM settings are optimized for memory and garbage collection.
-3. **Pod Scheduling**: Verify node selectors and affinity rules to ensure AVS pods are scheduled on the intended nodes.
+#### Recommendations for Pod-Level Configurations:
+1. **Pod Placement**: Ensure that AVS pods are scheduled on nodes with sufficient resources and appropriate labels.
+2. **Pod Resource Requests and Limits**: Define clear resource requests and limits for AVS pods to prevent resource contention and ensure stability.
 
-### 🌟 Performance Improvements
-- **Node Utilization**: Current utilization is low. Consider consolidating workloads or scaling down if resources are underutilized.
-- **Resource Allocation**: Review and adjust resource requests and limits for non-critical pods to free up resources for AVS pods when deployed.
+### 📈 Performance and Resource Allocation
 
-This analysis provides a comprehensive overview of the node's current state and recommendations for optimizing resource allocation and preparing for future AVS pod deployments.
+#### Recommendations for Resource Allocation Adjustments:
+1. **CPU and Memory**: Re-evaluate the CPU and memory requests for existing pods to optimize resource utilization.
+2. **Pod Distribution**: Balance the distribution of pods across nodes to avoid overloading a single node.
+
+### 🛠️ JVM Memory Settings and Performance Improvements
+
+#### General Recommendations:
+1. **JVM Configuration**: For AVS pods, ensure JVM settings are optimized for performance:
+   - **Heap Settings**: Configure initial and maximum heap sizes appropriately (-Xms, -Xmx).
+   - **Garbage Collection**: Use a suitable GC algorithm (e.g., ZGC) and configure thread counts (-XX:ZYoungGCThreads, -XX:ZOldGCThreads).
+   - **NUMA and Memory Settings**: Consider enabling NUMA settings if applicable (-XX:-UseNUMA).
+   - **OOM Handling**: Enable exit on OOM to prevent pod hangs (-XX:+ExitOnOutOfMemoryError).
+
+2. **Monitoring and Logging**: Implement comprehensive logging and monitoring for JVM metrics, including heap usage and GC performance.
+
+3. **Failed Config-Injection Logs**: Regularly review logs for any failed configuration injections to ensure all settings are applied correctly.
+
+### 🌟 Conclusion
+
+While the node is currently stable and underutilized, there is room for optimization in resource allocation and pod scheduling. By implementing the above recommendations, you can enhance the performance and reliability of your Kubernetes environment, especially when deploying AVS pods.
 
 ### Node: ip-192-168-27-123.ec2.internal
 
 ### 🖥️ Node Analysis: ip-192-168-27-123.ec2.internal
 
-#### Node Capacity & Allocatable Resources
-- **CPU**: 4 cores (Allocatable: 3920m)
-- **Memory**: 15.1 GiB (Allocatable: 14.2 GiB)
-- **Ephemeral Storage**: 80 GiB (Allocatable: 71 GiB)
-- **Pods**: 58
+#### Node Capacity and Conditions
+- **CPU Capacity**: 4 cores
+- **Memory Capacity**: 15.9 GiB
+- **Allocatable CPU**: 3920m
+- **Allocatable Memory**: 14.8 GiB
+- **Node Conditions**: No memory, disk, or PID pressure. Node is ready. ✅
 
-#### Node Conditions
-- **MemoryPressure**: False (Sufficient memory available)
-- **DiskPressure**: False (No disk pressure)
-- **PIDPressure**: False (Sufficient PID available)
-- **Ready**: True (Node is ready)
-
-#### Cloud Provider Details
+#### Cloud Provider and Instance Type
+- **Provider**: AWS
 - **Instance Type**: m5.xlarge
 - **Region**: us-east-1
 - **Zone**: us-east-1b
 
-#### Resource Allocation & Utilization
-- **CPU Requests**: 180m (4% of allocatable)
-- **Memory Requests**: 120Mi (0% of allocatable)
-- **Memory Limits**: 768Mi (5% of allocatable)
+#### Resource Allocation and Utilization
+- **CPU Requests**: 180m (4%)
+- **Memory Requests**: 120Mi (0%)
+- **Memory Limits**: 768Mi (5%)
+- **No significant overcommitment detected.**
 
 #### Node-Level Issues or Warnings
-- No OOMKill events or system warnings detected.
+- **No OOMKill events**: The node has not experienced any out-of-memory issues recently. 🚫
 
 ### 🧵 Pod Analysis: avs-app-aerospike-vector-search-2
 
-#### Aerospike Vector Search Configuration
-- **Node Roles**: `query`
-- **Heartbeat Seeds**: Correctly configured with two seeds.
-- **Listener Addresses**: Configured to listen on all interfaces (0.0.0.0).
-- **Interconnect Ports**: Port 5001 is configured.
+#### Configuration Review
+- **Node Roles**: Correctly set to `query`.
+- **Heartbeat Seeds**: Configured with two seeds, ensuring redundancy.
+- **Listener Addresses**: Configured to listen on all interfaces (`0.0.0.0`).
+- **Interconnect Settings**: Port `5001` is properly configured.
 
 #### JVM Configuration
 - **Memory Settings**:
-  - **Initial Heap Size (-Xms)**: Not explicitly set, defaults to 241MB.
-  - **Maximum Heap Size (-Xmx)**: 12.1 GiB
-  - **Soft Max Heap Size (-XX:SoftMaxHeapSize)**: 12.1 GiB
-  - **Reserved Code Cache Size (-XX:ReservedCodeCacheSize)**: 240MB
-  - **Code Heap Sizes**: NonNMethod: 5.8MB, NonProfiled: 122MB, Profiled: 122MB
+  - **Initial Heap Size (-Xms)**: Not explicitly set, defaults to JVM's choice.
+  - **Maximum Heap Size (-Xmx)**: 12,419 MiB
+  - **Soft Max Heap Size (-XX:SoftMaxHeapSize)**: 12,419 MiB
+  - **Reserved Code Cache Size (-XX:ReservedCodeCacheSize)**: 240 MiB
+  - **Code Heap Sizes**: NonNMethod: 5.6 MiB, NonProfiled: 117.2 MiB, Profiled: 117.2 MiB
 
 - **GC Settings**:
-  - **GC Type**: ZGC
-  - **GC Thread Counts**: Young: 1, Old: 1
-  - **GC-specific Flags**: ZGenerational enabled
+  - **GC Type**: ZGC with generational support enabled.
+  - **GC Thread Counts**: ZYoungGCThreads=1, ZOldGCThreads=1
 
 - **Other Important Flags**:
-  - **NUMA Settings**: Not used
-  - **Compressed Oops**: Disabled
-  - **Pre-touch Settings**: Enabled
-  - **Compiler Settings**: CICompilerCount set to 3
-  - **Exit on OOM**: Enabled
+  - **NUMA Settings**: NUMA and NUMA Interleaving are disabled.
+  - **Compressed Oops**: Disabled.
+  - **Pre-touch Settings**: Always pre-touch enabled.
+  - **Compiler Settings**: CICompilerCount=3
+  - **Exit on OOM**: Enabled.
 
 - **Module and Package Settings**:
   - **Added Modules**: jdk.incubator.vector
-  - **Opened Packages**: Multiple packages opened for internal access
-  - **Exported Packages**: Several packages exported for use
+  - **Opened Packages**: Multiple packages opened for ALL-UNNAMED modules.
+  - **Exported Packages**: Several packages exported for ALL-UNNAMED modules.
 
-#### GC.heap_info Analysis
-- **Current Heap Usage**: 2010M
-- **Heap Capacity**: 2010M
-- **Max Capacity**: 12420M
-- **Metaspace Usage**: 77.5MB
-- **Class Space Usage**: 8.5MB
+#### GC and Heap Info
+- **Current Heap Usage**: 1224 MiB
+- **Heap Capacity**: 1224 MiB
+- **Max Capacity**: 12,420 MiB
+- **Metaspace Usage**: 75.9 MiB
+- **Class Space Usage**: 8.5 MiB
 
-#### Configuration Logs
-- No failed config-injection logs detected.
+#### Config-Injection Logs
+- **No failed config-injection logs detected**. Initialization completed successfully. ✅
 
 ### Recommendations
 
 1. **Node-Level Optimizations**:
-   - Consider increasing CPU requests for the AVS pod to ensure it has dedicated resources, especially under load.
-   - Monitor memory usage closely, as the current configuration is underutilizing available memory.
+   - Consider enabling NUMA settings if the application can benefit from memory locality.
+   - Monitor CPU and memory usage trends to ensure resources are not underutilized.
 
 2. **Pod-Level Configurations**:
-   - Ensure the listener addresses are correctly configured for your network setup. Listening on all interfaces is generally fine but can be restricted for security.
-   - Validate the heartbeat seeds to ensure they are reachable and correct.
+   - Ensure all pods have appropriate resource requests and limits to prevent resource contention.
+   - Validate that the advertised-listeners are correctly set for all network modes.
 
 3. **Resource Allocation Adjustments**:
-   - Adjust memory requests and limits to better reflect actual usage and to prevent potential OOM issues.
-   - Consider setting CPU limits to prevent resource contention.
+   - Increase memory requests for the AVS pod to reflect actual usage and avoid potential OOM scenarios.
+   - Consider setting CPU limits to prevent excessive CPU usage by any single pod.
 
 4. **Performance Improvements**:
-   - Review the JVM's GC configuration to ensure it aligns with your application's performance requirements. ZGC is suitable for low-latency applications but monitor its performance.
-   - Increase the number of GC threads if the application experiences long GC pauses.
+   - Evaluate the impact of disabling compressed oops. Enabling it can save memory if the heap size is below 32 GiB.
+   - Review GC thread settings to ensure they are optimal for the workload.
 
 5. **JVM Memory Settings**:
-   - Consider explicitly setting the initial heap size (-Xms) to match the maximum heap size (-Xmx) to reduce heap resizing overhead.
-   - Enable compressed oops if possible to reduce memory footprint, unless there's a specific reason for it being disabled.
+   - Explicitly set the initial heap size (-Xms) to match the maximum heap size (-Xmx) for better performance.
+   - Monitor heap usage and adjust -Xmx if the application consistently uses close to the maximum heap size.
 
-By addressing these recommendations, you can optimize both node and pod performance, ensuring efficient resource utilization and stability. 🚀
+By implementing these recommendations, you can enhance the performance and stability of your Aerospike Vector Search deployment. 🚀
 
 ### Node: ip-192-168-28-89.ec2.internal
 
-# 🖥️ Node Analysis: ip-192-168-28-89.ec2.internal
+### 🖥️ Node Analysis: ip-192-168-28-89.ec2.internal
 
-## Node Overview
-- **Instance Type**: m5.xlarge
-- **Region**: us-east-1
-- **Zone**: us-east-1b
-- **Capacity**: 
-  - CPU: 4 cores
-  - Memory: 16GB
-  - Pods: 58
+#### Node Capacity & Conditions
+- **CPU**: 4 cores
+- **Memory**: 16 GB
 - **Allocatable Resources**:
-  - CPU: 3920m
-  - Memory: 14.35GB
-- **Node Conditions**: All conditions are normal with no memory, disk, or PID pressure. The node is ready.
-
-## Node-Level Recommendations
-1. **Resource Utilization**: The node's CPU and memory requests are low, indicating underutilization. Consider consolidating workloads or scaling down the node size to optimize cost.
-2. **Monitoring**: Ensure continuous monitoring of node metrics to detect any future resource pressure.
-
-# 🧵 Pod Analysis: avs-app-aerospike-vector-search-1
-
-## Configuration Review
-- **Cluster Name**: avs-db-1
-- **Node Roles**: index-update
-- **Heartbeat Seeds**: Correctly configured with two seed nodes.
-- **Listener Addresses**: Properly set to 0.0.0.0 for interconnect and external IP for service.
-- **Interconnect Ports**: Port 5001 is correctly configured.
-
-## JVM Configuration
-- **Memory Settings**:
-  - Initial Heap Size: Not explicitly set
-  - Maximum Heap Size (-Xmx): 12.55GB
-  - Soft Max Heap Size: 12.55GB
-  - Reserved Code Cache Size: 240MB
-  - Code Heap Sizes: NonNMethod (5.8MB), NonProfiled (122.9MB), Profiled (122.9MB)
-- **GC Settings**:
-  - GC Type: ZGC
-  - GC Thread Counts: ZYoungGCThreads=1, ZOldGCThreads=1
-  - GC-specific Flags: ZGenerational enabled
-- **Other Important Flags**:
-  - NUMA settings: Disabled
-  - Compressed oops: Disabled
-  - Pre-touch settings: Enabled
-  - Compiler settings: CICompilerCount=3
-  - Exit on OOM: Enabled
-- **Module and Package Settings**:
-  - Added Modules: jdk.incubator.vector
-  - Opened Packages: Multiple packages opened for ALL-UNNAMED
-
-## GC.heap_info Analysis
-- **Current Heap Usage**: 2044MB
-- **Heap Capacity**: 3244MB
-- **Max Capacity**: 12554MB
-- **Metaspace Usage**: 82MB used, 1.1GB reserved
-- **Class Space Usage**: 8.9MB used, 1MB reserved
-
-## Pod-Level Recommendations
-1. **JVM Memory Settings**: Consider setting an initial heap size (-Xms) to improve startup performance.
-2. **GC Configuration**: ZGC is appropriate for low-latency applications, but ensure adequate monitoring of GC performance.
-3. **NUMA Settings**: Evaluate enabling NUMA settings if running on a NUMA-aware system for potential performance gains.
-
-## Resource Allocation Adjustments
-- **CPU and Memory Requests**: Currently set to 0, which can lead to scheduling issues. Define appropriate requests and limits to ensure resource guarantees.
-
-## Performance Improvements
-1. **Heap Usage**: Monitor heap usage trends to ensure the application is not approaching max capacity, which could lead to GC thrashing.
-2. **Code Cache**: The reserved code cache size is adequate, but monitor for any signs of code cache exhaustion.
-
-## Failed Config-Injection Logs
-- No failed config-injection logs detected. Initialization logs indicate successful configuration application.
-
----
-
-By optimizing node and pod configurations, you can enhance the performance and cost-effectiveness of your Aerospike Vector Search deployment. 🛠️
-
-### Node: ip-192-168-52-147.ec2.internal
-
-### 🚀 Node Analysis: ip-192-168-52-147.ec2.internal
-
-#### 🖥️ Node Capacity & Conditions
-- **Instance Type**: `r5.2xlarge` (Cloud Provider: AWS)
-- **CPU**: 8 cores
-- **Memory**: 62 GB
-- **Allocatable Resources**: 
-  - CPU: 7910m
-  - Memory: 61 GB
-- **Node Conditions**: 
+  - **CPU**: 3920m
+  - **Memory**: 14.3 GB
+- **Conditions**: 
   - MemoryPressure: False
   - DiskPressure: False
   - PIDPressure: False
   - Ready: True
 
-#### 🏷️ Cloud Provider Details
-- **Region**: `us-east-1`
-- **Zone**: `us-east-1d`
-- **Instance Type**: `r5.2xlarge`
+#### Cloud Provider & Instance Type
+- **Provider**: AWS
+- **Instance Type**: m5.xlarge
+- **Region**: us-east-1
+- **Zone**: us-east-1b
 
-#### 📊 Resource Allocation & Utilization
+#### Resource Allocation & Utilization
+- **CPU Requests**: 190m (4%)
+- **Memory Requests**: 184Mi (1%)
+- **CPU Limits**: 400m (10%)
+- **Memory Limits**: 1280Mi (8%)
+
+#### Node-Level Issues
+- No OOMKill events or warnings detected.
+
+### 🧵 Pod Analysis: avs-app-aerospike-vector-search-1
+
+#### Configuration Review
+- **Node Roles**: index-update
+- **Heartbeat Seeds**: Correctly configured with two seeds.
+- **Listener Addresses**: Configured for 0.0.0.0 on port 5001.
+- **Interconnect Settings**: Properly set for all interfaces.
+
+#### JVM Configuration
+- **Memory Settings**:
+  - **Initial Heap Size (-Xms)**: Not explicitly set, defaults to 243 MB.
+  - **Maximum Heap Size (-Xmx)**: 12.5 GB
+  - **Soft Max Heap Size (-XX:SoftMaxHeapSize)**: 12.5 GB
+  - **Reserved Code Cache Size (-XX:ReservedCodeCacheSize)**: 240 MB
+  - **Code Heap Sizes**: NonNMethod: 5.8 MB, NonProfiled: 122 MB, Profiled: 122 MB
+
+- **GC Settings**:
+  - **GC Type**: ZGC
+  - **GC Thread Counts**: ZYoungGCThreads=1, ZOldGCThreads=1
+  - **GC-specific Flags**: -XX:+ZGenerational
+
+- **Other Important Flags**:
+  - **NUMA Settings**: -XX:-UseNUMA, -XX:-UseNUMAInterleaving
+  - **Compressed Oops**: -XX:-UseCompressedOops
+  - **Pre-touch Settings**: -XX:+AlwaysPreTouch
+  - **Compiler Settings**: -XX:CICompilerCount=3
+  - **Exit on OOM**: -XX:+ExitOnOutOfMemoryError
+
+- **Module and Package Settings**:
+  - **Added Modules**: jdk.incubator.vector
+  - **Opened Packages**: Multiple packages opened for ALL-UNNAMED
+  - **Exported Packages**: Several packages exported for ALL-UNNAMED
+
+#### GC.heap_info Analysis
+- **Current Heap Usage**: 2036 MB
+- **Heap Capacity**: 2972 MB
+- **Max Capacity**: 12.5 GB
+- **Metaspace Usage**: 82 MB
+- **Class Space Usage**: 8.9 MB
+
+#### Failed Config-Injection Logs
+- No failed configuration injections detected.
+
+### Recommendations
+
+#### 1. Node-Level Optimizations
+- **Resource Requests**: Increase CPU and memory requests for critical pods to ensure they have guaranteed resources.
+- **Monitoring**: Implement monitoring for resource usage to prevent future resource constraints.
+
+#### 2. Pod-Level Configurations
+- **Heartbeat Seeds**: Ensure all nodes in the cluster are correctly listed as seeds for redundancy.
+- **Listener Configuration**: Consider restricting listener addresses to specific interfaces for security.
+
+#### 3. Resource Allocation Adjustments
+- **CPU & Memory Limits**: Re-evaluate limits to prevent overcommitment and ensure stability.
+
+#### 4. Performance Improvements
+- **GC Threads**: Consider increasing ZGC thread counts if GC pauses become an issue.
+- **NUMA Settings**: Evaluate the impact of enabling NUMA settings for potential performance gains.
+
+#### 5. JVM Memory Settings
+- **Heap Size**: Ensure the maximum heap size is within the limits of the node's available memory.
+- **Code Cache**: Monitor the usage of the code cache and adjust if necessary.
+
+By implementing these recommendations, you can enhance the stability and performance of the Aerospike Vector Search deployment on this node. 🚀
+
+### Node: ip-192-168-52-147.ec2.internal
+
+### 🖥️ Node-Level Analysis: ip-192-168-52-147.ec2.internal
+
+#### Node Information:
+- **Instance Type**: `r5.2xlarge` (AWS)
+- **Region**: `us-east-1`, **Zone**: `us-east-1d`
+- **Capacity**: 
+  - CPU: 8 cores
+  - Memory: 62 GB
+  - Storage: ~80 GB
+- **Allocatable Resources**:
+  - CPU: 7910m
+  - Memory: 61 GB
+  - Pods: 58
+
+#### Node Conditions:
+- **MemoryPressure**: False
+- **DiskPressure**: False
+- **PIDPressure**: False
+- **Ready**: True
+
+#### Resource Allocation:
 - **CPU Requests**: 230m (2%)
 - **CPU Limits**: 400m (5%)
 - **Memory Requests**: 724Mi (1%)
 - **Memory Limits**: 1280Mi (2%)
 
-#### 🔍 Node-Level Issues
-- No OOMKill events found.
-- No significant node-level warnings or issues detected.
+#### Observations:
+- The node is underutilized in terms of both CPU and memory.
+- No OOM events or node-level issues detected.
 
-### 🧵 AVS Pod Analysis: avs-app-aerospike-vector-search-0
+### Recommendations for Node-Level Optimizations:
+1. **Resource Utilization**: Consider scheduling more pods or increasing resource requests for existing pods to better utilize the node's capacity.
+2. **Monitoring**: Implement monitoring to track resource usage trends over time for proactive scaling.
 
-#### 📄 Configuration Review: aerospike-vector-search.yml
-- **Cluster Name**: `avs-db-1`
-- **Node Roles**: `standalone-indexer`
-- **Heartbeat Seeds**: Correctly configured with multiple seeds.
-- **Listener Addresses**: Configured to `0.0.0.0` for interconnect.
-- **Advertised Listeners**: Correctly set to external IP `3.238.188.22`.
+---
 
-#### 📦 JVM Configuration
+### 🧵 Pod-Level Analysis: avs-app-aerospike-vector-search-0
+
+#### Configuration Review:
+- **Node Roles**: Correctly identified as `standalone-indexer`.
+- **Heartbeat Seeds**: Configured with two seeds, ensuring redundancy.
+- **Listener Addresses**: Properly set to `0.0.0.0`, allowing all interfaces.
+- **Interconnect Settings**: Port `5001` is open and correctly configured.
+
+#### JVM Configuration:
 - **Memory Settings**:
-  - Initial Heap Size: `1027604480` bytes (~980MB)
-  - Maximum Heap Size: `53267660800` bytes (~50GB)
-  - Soft Max Heap Size: `53267660800` bytes (~50GB)
-  - Reserved Code Cache Size: `251658240` bytes (~240MB)
-  - Code Heap Sizes: NonNMethod, NonProfiled, Profiled set appropriately.
+  - Initial Heap Size: Not explicitly set
+  - Maximum Heap Size: `-Xmx50799m` (~50 GB)
+  - Soft Max Heap Size: `-XX:SoftMaxHeapSize=53267m`
+  - Reserved Code Cache Size: `-XX:ReservedCodeCacheSize=240m`
+  - Code Heap Sizes: NonNMethod, NonProfiled, Profiled are set appropriately
 
 - **GC Settings**:
-  - GC Type: `UseZGC`
-  - GC Thread Counts: `ZYoungGCThreads=2`, `ZOldGCThreads=2`
-  - GC-specific Flags: `ZGenerational`
+  - GC Type: `-XX:+UseZGC`
+  - GC Thread Counts: `-XX:ZYoungGCThreads=2`, `-XX:ZOldGCThreads=2`
+  - GC-specific Flags: `-XX:+ZGenerational`
 
 - **Other Important Flags**:
   - NUMA settings: `-XX:-UseNUMA`, `-XX:-UseNUMAInterleaving`
@@ -531,91 +398,94 @@ By optimizing node and pod configurations, you can enhance the performance and c
   - Exit on OOM: `-XX:+ExitOnOutOfMemoryError`
 
 - **Module and Package Settings**:
-  - Added Modules: `jdk.incubator.vector`
-  - Opened Packages: Multiple packages opened for `ALL-UNNAMED`
-  - Exported Packages: Various internal packages exported.
+  - Added modules: `--add-modules jdk.incubator.vector`
+  - Opened packages: Multiple packages opened for unnamed modules
+  - Exported packages: Several packages exported for internal use
 
-#### 📈 GC.heap_info Analysis
-- **Current Heap Usage**: 21662M
-- **Heap Capacity**: 49440M
-- **Max Capacity**: 50800M
-- **Metaspace Usage**: 80347K
-- **Class Space Usage**: 8783K
+#### GC Heap Info:
+- **Current Heap Usage**: 32 GB
+- **Heap Capacity**: 45 GB
+- **Max Capacity**: 50 GB
+- **Metaspace Usage**: 80 MB
+- **Class Space Usage**: 8 MB
 
-#### 🛠️ Failed Config-Injection Logs
-- No failed config-injection logs detected.
+#### Observations:
+- JVM is configured with a large heap size, which is suitable given the node's memory capacity.
+- No failed config-injection logs found.
 
-### 📌 Recommendations
+### Recommendations for Pod-Level Configurations:
+1. **JVM Memory Settings**: Ensure that the heap size is optimal for your workload. Consider adjusting `-Xms` to match `-Xmx` for better performance consistency.
+2. **GC Configuration**: ZGC is suitable for large heaps, but monitor GC logs to ensure it meets your latency requirements.
+3. **Resource Requests**: Set explicit CPU and memory requests to ensure the pod gets the necessary resources.
 
-1. **Node-Level Optimizations**:
-   - Ensure that the node is not overcommitted in terms of CPU and memory. Current utilization is low, allowing for potential scaling of workloads.
+### 📈 Performance Improvements:
+1. **Heap Management**: Monitor heap usage and adjust the `SoftMaxHeapSize` to avoid unnecessary full GCs.
+2. **GC Monitoring**: Regularly review GC logs to identify any potential performance bottlenecks.
 
-2. **Pod-Level Configurations**:
-   - The pod configuration seems optimal with appropriate node roles and heartbeat seeds. Ensure that the advertised listener IP is correct and accessible.
-
-3. **Resource Allocation Adjustments**:
-   - Consider setting explicit resource requests and limits for the AVS pod to ensure predictable performance and avoid resource contention.
-
-4. **Performance Improvements**:
-   - Monitor the GC performance and adjust the ZGC thread counts if necessary to optimize garbage collection times.
-
-5. **JVM Memory Settings**:
-   - The JVM memory settings are well-configured, but ensure that the maximum heap size does not exceed the node's available memory to prevent OOM issues.
-
-By following these recommendations, you can optimize the performance and reliability of the Aerospike Vector Search deployment on this Kubernetes node. 🌟
+### Final Thoughts:
+- The node and pod configurations are generally well-optimized for the current workload.
+- Continuous monitoring and adjustments based on workload changes will ensure optimal performance and resource utilization.
 
 ### Node: ip-192-168-53-124.ec2.internal
 
-# 🖥️ Node Analysis: ip-192-168-53-124.ec2.internal
+### 🖥️ Node Analysis: ip-192-168-53-124.ec2.internal
 
-## Node Overview
-- **Instance Type**: m5.xlarge
-- **Region**: us-east-1
-- **Zone**: us-east-1d
-- **Cloud Provider**: AWS
-- **Capacity**:
-  - CPU: 4 cores
-  - Memory: ~15.1 GiB
-  - Pods: 58
-- **Allocatable Resources**:
-  - CPU: 3920m
-  - Memory: ~14.2 GiB
-  - Pods: 58
-- **Node Conditions**:
-  - MemoryPressure: ❌ False
-  - DiskPressure: ❌ False
-  - PIDPressure: ❌ False
-  - Ready: ✅ True
+#### Node Capacity & Allocatable Resources
+- **CPU Capacity:** 4 cores
+- **Memory Capacity:** 15,896,988 Ki (~15.16 GiB)
+- **Allocatable CPU:** 3920m (~3.92 cores)
+- **Allocatable Memory:** 14,880,156 Ki (~14.18 GiB)
+- **Pods Capacity & Allocatable:** 58
 
-## Node Resource Utilization
-- **CPU Requests**: 500m (12% of capacity)
-- **Memory Requests**: 740Mi (5% of capacity)
-- **Memory Limits**: 4180Mi (28% of capacity)
-- **Ephemeral Storage**: Not utilized
+#### Node Conditions
+- **Memory Pressure:** ❌ False (Sufficient memory available)
+- **Disk Pressure:** ❌ False (No disk pressure)
+- **PID Pressure:** ❌ False (Sufficient PID available)
+- **Ready Status:** ✅ True (Node is ready)
 
-## Node-Level Observations
-- The node is healthy with no memory, disk, or PID pressure.
-- The node has sufficient resources available for additional workloads.
-- No OOM events detected, indicating stable memory usage.
+#### Cloud Provider & Instance Type
+- **Provider:** AWS
+- **Instance Type:** m5.xlarge
+- **Region & Zone:** us-east-1, us-east-1d
 
-## Recommendations for Node-Level Optimizations
-1. **Resource Allocation**: Consider increasing resource requests for critical pods to ensure they have guaranteed resources.
-2. **Monitoring**: Implement monitoring alerts for CPU and memory usage to preemptively address potential resource constraints.
-3. **Scaling**: If workload increases, consider adding more nodes or upgrading to a larger instance type.
+#### Resource Allocation & Utilization
+- **CPU Requests:** 500m (12% of allocatable)
+- **Memory Requests:** 740Mi (5% of allocatable)
+- **Memory Limits:** 4180Mi (28% of allocatable)
+- **Ephemeral Storage:** Not utilized
 
-## Pod-Level Analysis
-- **AVS Pods**: No Aerospike Vector Search pods found on this node.
+#### Node-Level Issues or Warnings
+- **OOM Events:** No OOM events detected
+- **Node Events:** No significant events
 
-## Recommendations for Pod-Level Configurations
-- **Deployment**: Ensure AVS pods are deployed on this node if required, by setting appropriate node selectors or affinities in the pod specifications.
+### 🛠️ Recommendations for Node-Level Optimizations
+1. **Resource Requests & Limits:** Consider setting CPU limits to prevent overcommitment and ensure fair resource distribution.
+2. **Pod Distribution:** Ensure even distribution of pods across nodes to avoid resource bottlenecks.
+3. **Monitoring:** Implement monitoring for ephemeral storage usage to prevent potential issues.
 
-## JVM Configuration and Performance
-- **JVM Analysis**: Not applicable as no AVS pods are present.
+### 🚀 Pod-Level Analysis
+- **AVS Pods:** No Aerospike Vector Search pods found on this node.
 
-## General Recommendations
-1. **Node Role Assignment**: Assign specific roles to nodes to optimize workload distribution and resource utilization.
-2. **Pod Distribution**: Ensure balanced distribution of pods across nodes to avoid overloading a single node.
-3. **Resource Requests and Limits**: Review and adjust resource requests and limits for non-AVS pods to optimize node utilization.
+### 📈 Recommendations for Pod-Level Configurations
+- **Node Roles & Heartbeat Seeds:** Ensure correct node roles and heartbeat seeds are configured in `aerospike-vector-search.yml`.
+- **Listener Addresses & Interconnect Settings:** Validate listener addresses and interconnect settings for optimal communication.
 
-## Conclusion
-The node `ip-192-168-53-124.ec2.internal` is operating efficiently with no immediate issues. However, it is crucial to continuously monitor and adjust configurations as workloads evolve to maintain optimal performance.
+### 💡 Resource Allocation Adjustments
+- **CPU & Memory Requests:** Adjust requests to reflect actual usage, ensuring efficient resource utilization.
+- **Memory Limits:** Set appropriate memory limits to prevent pods from consuming excessive resources.
+
+### 🚀 Performance Improvements
+- **JVM Configuration:** For AVS pods, ensure JVM settings are optimized for performance:
+  - **Heap Sizes:** Set initial and max heap sizes based on workload requirements.
+  - **GC Settings:** Use appropriate garbage collection settings for low-latency applications.
+  - **NUMA & Pre-touch Settings:** Enable NUMA interleaving and pre-touch settings for optimized memory access.
+
+### 🧠 JVM Memory Settings Recommendations
+- **Initial Heap Size (-Xms):** Set to a reasonable percentage of available memory (e.g., 25%).
+- **Max Heap Size (-Xmx):** Ensure it does not exceed available memory.
+- **Soft Max Heap Size (-XX:SoftMaxHeapSize):** Use to allow flexible heap growth.
+- **Reserved Code Cache Size (-XX:ReservedCodeCacheSize):** Adjust based on application needs.
+- **GC Threads:** Configure based on CPU cores available.
+
+### 🌟 Conclusion
+The node is well-configured with no immediate issues. However, optimizing resource requests and limits, along with JVM settings for AVS pods, can enhance performance and resource utilization. Regular monitoring and adjustments based on workload patterns are recommended.
