@@ -1,54 +1,59 @@
-### 🚀 Node Analysis: ip-192-168-52-147.ec2.internal
+### 🖥️ Node-Level Analysis: ip-192-168-52-147.ec2.internal
 
-#### 🖥️ Node Capacity & Conditions
-- **Instance Type**: `r5.2xlarge` (Cloud Provider: AWS)
-- **CPU**: 8 cores
-- **Memory**: 62 GB
-- **Allocatable Resources**: 
+#### Node Information:
+- **Instance Type**: `r5.2xlarge` (AWS)
+- **Region**: `us-east-1`, **Zone**: `us-east-1d`
+- **Capacity**: 
+  - CPU: 8 cores
+  - Memory: 62 GB
+  - Storage: ~80 GB
+- **Allocatable Resources**:
   - CPU: 7910m
   - Memory: 61 GB
-- **Node Conditions**: 
-  - MemoryPressure: False
-  - DiskPressure: False
-  - PIDPressure: False
-  - Ready: True
+  - Pods: 58
 
-#### 🏷️ Cloud Provider Details
-- **Region**: `us-east-1`
-- **Zone**: `us-east-1d`
-- **Instance Type**: `r5.2xlarge`
+#### Node Conditions:
+- **MemoryPressure**: False
+- **DiskPressure**: False
+- **PIDPressure**: False
+- **Ready**: True
 
-#### 📊 Resource Allocation & Utilization
+#### Resource Allocation:
 - **CPU Requests**: 230m (2%)
 - **CPU Limits**: 400m (5%)
 - **Memory Requests**: 724Mi (1%)
 - **Memory Limits**: 1280Mi (2%)
 
-#### 🔍 Node-Level Issues
-- No OOMKill events found.
-- No significant node-level warnings or issues detected.
+#### Observations:
+- The node is underutilized in terms of both CPU and memory.
+- No OOM events or node-level issues detected.
 
-### 🧵 AVS Pod Analysis: avs-app-aerospike-vector-search-0
+### Recommendations for Node-Level Optimizations:
+1. **Resource Utilization**: Consider scheduling more pods or increasing resource requests for existing pods to better utilize the node's capacity.
+2. **Monitoring**: Implement monitoring to track resource usage trends over time for proactive scaling.
 
-#### 📄 Configuration Review: aerospike-vector-search.yml
-- **Cluster Name**: `avs-db-1`
-- **Node Roles**: `standalone-indexer`
-- **Heartbeat Seeds**: Correctly configured with multiple seeds.
-- **Listener Addresses**: Configured to `0.0.0.0` for interconnect.
-- **Advertised Listeners**: Correctly set to external IP `3.238.188.22`.
+---
 
-#### 📦 JVM Configuration
+### 🧵 Pod-Level Analysis: avs-app-aerospike-vector-search-0
+
+#### Configuration Review:
+- **Node Roles**: Correctly identified as `standalone-indexer`.
+- **Heartbeat Seeds**: Configured with two seeds, ensuring redundancy.
+- **Listener Addresses**: Properly set to `0.0.0.0`, allowing all interfaces.
+- **Interconnect Settings**: Port `5001` is open and correctly configured.
+
+#### JVM Configuration:
 - **Memory Settings**:
-  - Initial Heap Size: `1027604480` bytes (~980MB)
-  - Maximum Heap Size: `53267660800` bytes (~50GB)
-  - Soft Max Heap Size: `53267660800` bytes (~50GB)
-  - Reserved Code Cache Size: `251658240` bytes (~240MB)
-  - Code Heap Sizes: NonNMethod, NonProfiled, Profiled set appropriately.
+  - Initial Heap Size: Not explicitly set
+  - Maximum Heap Size: `-Xmx50799m` (~50 GB)
+  - Soft Max Heap Size: `-XX:SoftMaxHeapSize=53267m`
+  - Reserved Code Cache Size: `-XX:ReservedCodeCacheSize=240m`
+  - Code Heap Sizes: NonNMethod, NonProfiled, Profiled are set appropriately
 
 - **GC Settings**:
-  - GC Type: `UseZGC`
-  - GC Thread Counts: `ZYoungGCThreads=2`, `ZOldGCThreads=2`
-  - GC-specific Flags: `ZGenerational`
+  - GC Type: `-XX:+UseZGC`
+  - GC Thread Counts: `-XX:ZYoungGCThreads=2`, `-XX:ZOldGCThreads=2`
+  - GC-specific Flags: `-XX:+ZGenerational`
 
 - **Other Important Flags**:
   - NUMA settings: `-XX:-UseNUMA`, `-XX:-UseNUMAInterleaving`
@@ -58,35 +63,30 @@
   - Exit on OOM: `-XX:+ExitOnOutOfMemoryError`
 
 - **Module and Package Settings**:
-  - Added Modules: `jdk.incubator.vector`
-  - Opened Packages: Multiple packages opened for `ALL-UNNAMED`
-  - Exported Packages: Various internal packages exported.
+  - Added modules: `--add-modules jdk.incubator.vector`
+  - Opened packages: Multiple packages opened for unnamed modules
+  - Exported packages: Several packages exported for internal use
 
-#### 📈 GC.heap_info Analysis
-- **Current Heap Usage**: 21662M
-- **Heap Capacity**: 49440M
-- **Max Capacity**: 50800M
-- **Metaspace Usage**: 80347K
-- **Class Space Usage**: 8783K
+#### GC Heap Info:
+- **Current Heap Usage**: 32 GB
+- **Heap Capacity**: 45 GB
+- **Max Capacity**: 50 GB
+- **Metaspace Usage**: 80 MB
+- **Class Space Usage**: 8 MB
 
-#### 🛠️ Failed Config-Injection Logs
-- No failed config-injection logs detected.
+#### Observations:
+- JVM is configured with a large heap size, which is suitable given the node's memory capacity.
+- No failed config-injection logs found.
 
-### 📌 Recommendations
+### Recommendations for Pod-Level Configurations:
+1. **JVM Memory Settings**: Ensure that the heap size is optimal for your workload. Consider adjusting `-Xms` to match `-Xmx` for better performance consistency.
+2. **GC Configuration**: ZGC is suitable for large heaps, but monitor GC logs to ensure it meets your latency requirements.
+3. **Resource Requests**: Set explicit CPU and memory requests to ensure the pod gets the necessary resources.
 
-1. **Node-Level Optimizations**:
-   - Ensure that the node is not overcommitted in terms of CPU and memory. Current utilization is low, allowing for potential scaling of workloads.
+### 📈 Performance Improvements:
+1. **Heap Management**: Monitor heap usage and adjust the `SoftMaxHeapSize` to avoid unnecessary full GCs.
+2. **GC Monitoring**: Regularly review GC logs to identify any potential performance bottlenecks.
 
-2. **Pod-Level Configurations**:
-   - The pod configuration seems optimal with appropriate node roles and heartbeat seeds. Ensure that the advertised listener IP is correct and accessible.
-
-3. **Resource Allocation Adjustments**:
-   - Consider setting explicit resource requests and limits for the AVS pod to ensure predictable performance and avoid resource contention.
-
-4. **Performance Improvements**:
-   - Monitor the GC performance and adjust the ZGC thread counts if necessary to optimize garbage collection times.
-
-5. **JVM Memory Settings**:
-   - The JVM memory settings are well-configured, but ensure that the maximum heap size does not exceed the node's available memory to prevent OOM issues.
-
-By following these recommendations, you can optimize the performance and reliability of the Aerospike Vector Search deployment on this Kubernetes node. 🌟
+### Final Thoughts:
+- The node and pod configurations are generally well-optimized for the current workload.
+- Continuous monitoring and adjustments based on workload changes will ensure optimal performance and resource utilization.
